[gd_scene load_steps=9 format=3 uid="uid://ddxtmt050j0bb"]

[ext_resource type="Script" path="res://UpgradeMenu.gd" id="1_qv8gm"]
[ext_resource type="StyleBox" uid="uid://b83luei5ycw1" path="res://ButtonUPG.tres" id="2_ua8d6"]
[ext_resource type="Texture2D" uid="uid://d4kyvhdi3vegf" path="res://Assets/Coins/MonedaD.png" id="3_jqepm"]

[sub_resource type="Theme" id="Theme_fwyc1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2flmq"]
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="LabelSettings" id="LabelSettings_vtje0"]
font_size = 61

[sub_resource type="GDScript" id="GDScript_tayjp"]
script/source = "extends Control

func _ready():
	pass
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_41vdh"]
bg_color = Color(0.281187, 0.281187, 0.281187, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Upgrades" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_qv8gm")

[node name="Upgrades" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 18.55
anchor_right = 8.25
anchor_bottom = 20.875
offset_left = -40.0
offset_top = -6.10352e-05
offset_bottom = -7.00006
theme = SubResource("Theme_fwyc1")
theme_override_font_sizes/font_size = 50
text = "Upgrades"

[node name="UpgradeBG" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 18.9
anchor_top = 6.275
anchor_right = 45.025
anchor_bottom = 30.725
offset_left = -20.0001
offset_bottom = 26.9999
theme_override_styles/panel = SubResource("StyleBoxFlat_2flmq")

[node name="Label" type="Label" parent="Control/UpgradeBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.038
anchor_top = 0.024
anchor_right = 0.361
anchor_bottom = 0.113
offset_left = -0.470001
offset_top = -0.120001
offset_right = -0.465027
offset_bottom = 0.434998
text = "Upgrades"
label_settings = SubResource("LabelSettings_vtje0")

[node name="Exit_Button" type="Button" parent="Control/UpgradeBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.882
anchor_top = 0.043
anchor_right = 0.945
anchor_bottom = 0.105
offset_left = -0.330017
offset_top = -0.214996
offset_right = -0.425049
offset_bottom = 0.475006
theme_override_font_sizes/font_size = 40
text = "x"

[node name="ScrollContainer" type="ScrollContainer" parent="Control/UpgradeBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0001
offset_top = 179.0
offset_right = -25.0001
offset_bottom = -87.9999
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 0
script = SubResource("GDScript_tayjp")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/UpgradeBG/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PlasticPerClick" type="Button" parent="Control/UpgradeBG/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("2_ua8d6")
text = "  Plastic Per click (From Ocean) "
alignment = 0

[node name="Label" type="Label" parent="Control/UpgradeBG/ScrollContainer/VBoxContainer/PlasticPerClick"]
layout_mode = 2
offset_left = 638.0
offset_top = 26.0
offset_right = 1638.0
offset_bottom = 81.0
theme_override_font_sizes/font_size = 30

[node name="MonedaD" type="Sprite2D" parent="Control/UpgradeBG/ScrollContainer/VBoxContainer/PlasticPerClick"]
position = Vector2(616.36, 45.36)
scale = Vector2(2.42, 2.42)
texture = ExtResource("3_jqepm")

[node name="PlasticPerClickMult" type="Button" parent="Control/UpgradeBG/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("2_ua8d6")
text = "  Plastic Per Click Mult"
alignment = 0

[node name="Label2" type="Label" parent="Control/UpgradeBG/ScrollContainer/VBoxContainer/PlasticPerClickMult"]
layout_mode = 2
offset_left = 638.0
offset_top = 25.0
offset_right = 1638.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 30

[node name="MonedaD2" type="Sprite2D" parent="Control/UpgradeBG/ScrollContainer/VBoxContainer/PlasticPerClickMult"]
position = Vector2(616.36, 39.36)
scale = Vector2(2.42, 2.42)
texture = ExtResource("3_jqepm")

[node name="IncomePerRecycle" type="Button" parent="Control/UpgradeBG/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1000, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_41vdh")
text = "  Income Per Plastic Recycled"
alignment = 0

[node name="Label3" type="Label" parent="Control/UpgradeBG/ScrollContainer/VBoxContainer/IncomePerRecycle"]
layout_mode = 2
offset_left = 638.0
offset_top = 25.0
offset_right = 1638.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 30

[node name="MonedaD3" type="Sprite2D" parent="Control/UpgradeBG/ScrollContainer/VBoxContainer/IncomePerRecycle"]
position = Vector2(616.36, 46.36)
scale = Vector2(2.42, 2.42)
texture = ExtResource("3_jqepm")

[node name="MachineWorkSpeed" type="Button" parent="Control/UpgradeBG/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1000, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_41vdh")
text = "  Machine Working Speed"
alignment = 0

[node name="Label4" type="Label" parent="Control/UpgradeBG/ScrollContainer/VBoxContainer/MachineWorkSpeed"]
layout_mode = 2
offset_left = 638.0
offset_top = 27.0
offset_right = 1638.0
offset_bottom = 82.0
theme_override_font_sizes/font_size = 30

[node name="MonedaD4" type="Sprite2D" parent="Control/UpgradeBG/ScrollContainer/VBoxContainer/MachineWorkSpeed"]
position = Vector2(616.36, 47.36)
scale = Vector2(2.42, 2.42)
texture = ExtResource("3_jqepm")

[node name="GoldenPlasChance" type="Button" parent="Control/UpgradeBG/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1000, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_41vdh")
text = "  Golden Plastic Chance (100 Gold)"
alignment = 0

[node name="Label5" type="Label" parent="Control/UpgradeBG/ScrollContainer/VBoxContainer/GoldenPlasChance"]
layout_mode = 2
offset_left = 638.0
offset_top = 42.0
offset_right = 1638.0
offset_bottom = 65.0
theme_override_font_sizes/font_size = 30

[node name="MonedaD5" type="Sprite2D" parent="Control/UpgradeBG/ScrollContainer/VBoxContainer/GoldenPlasChance"]
position = Vector2(616.36, 54.36)
scale = Vector2(2.42, 2.42)
texture = ExtResource("3_jqepm")

[node name="GoldenPlasAmount" type="Button" parent="Control/UpgradeBG/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(1000, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_41vdh")
text = "  Golden Plastic Amount (+200)"
alignment = 0

[node name="Label6" type="Label" parent="Control/UpgradeBG/ScrollContainer/VBoxContainer/GoldenPlasAmount"]
layout_mode = 2
offset_left = 638.0
offset_top = 31.0
offset_right = 1638.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 30

[node name="MonedaD6" type="Sprite2D" parent="Control/UpgradeBG/ScrollContainer/VBoxContainer/GoldenPlasAmount"]
position = Vector2(616.36, 54.36)
scale = Vector2(2.42, 2.42)
texture = ExtResource("3_jqepm")

[node name="UpgradeInfoPanel" type="Control" parent="Control/UpgradeBG"]
anchors_preset = 0
offset_left = 232.0
offset_top = 850.0
offset_right = 632.0
offset_bottom = 983.0

[node name="ColorRect" type="ColorRect" parent="Control/UpgradeBG/UpgradeInfoPanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 16.0
offset_right = 411.0
offset_bottom = 116.0
color = Color(0.223529, 0.223529, 0.223529, 0.54902)

[node name="Label_Level" type="Label" parent="Control/UpgradeBG/UpgradeInfoPanel"]
layout_mode = 2
offset_left = 11.0
offset_top = 29.0
offset_right = 411.0
offset_bottom = 57.0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="Label_Effect" type="Label" parent="Control/UpgradeBG/UpgradeInfoPanel"]
layout_mode = 2
offset_left = 11.0
offset_top = 67.0
offset_right = 411.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1

[connection signal="mouse_entered" from="Control/UpgradeBG/ScrollContainer/VBoxContainer/PlasticPerClick" to="Control" method="_on_plastic_per_click_mouse_entered"]
[connection signal="mouse_exited" from="Control/UpgradeBG/ScrollContainer/VBoxContainer/PlasticPerClick" to="Control" method="_on_plastic_per_click_mouse_exited"]
[connection signal="pressed" from="Control/UpgradeBG/ScrollContainer/VBoxContainer/PlasticPerClick" to="Control" method="_on_plastic_per_click_pressed"]
[connection signal="mouse_entered" from="Control/UpgradeBG/ScrollContainer/VBoxContainer/PlasticPerClickMult" to="Control" method="_on_plastic_per_click_mult_mouse_entered"]
[connection signal="mouse_exited" from="Control/UpgradeBG/ScrollContainer/VBoxContainer/PlasticPerClickMult" to="Control" method="_on_plastic_per_click_mult_mouse_exited"]
[connection signal="pressed" from="Control/UpgradeBG/ScrollContainer/VBoxContainer/PlasticPerClickMult" to="Control" method="_on_plastic_per_click_mult_pressed"]
[connection signal="mouse_entered" from="Control/UpgradeBG/ScrollContainer/VBoxContainer/IncomePerRecycle" to="Control" method="_on_income_per_recycle_mouse_entered"]
[connection signal="mouse_exited" from="Control/UpgradeBG/ScrollContainer/VBoxContainer/IncomePerRecycle" to="Control" method="_on_income_per_recycle_mouse_exited"]
[connection signal="pressed" from="Control/UpgradeBG/ScrollContainer/VBoxContainer/IncomePerRecycle" to="Control" method="_on_income_per_recycle_pressed"]
[connection signal="mouse_entered" from="Control/UpgradeBG/ScrollContainer/VBoxContainer/MachineWorkSpeed" to="Control" method="_on_machine_work_speed_mouse_entered"]
[connection signal="mouse_exited" from="Control/UpgradeBG/ScrollContainer/VBoxContainer/MachineWorkSpeed" to="Control" method="_on_machine_work_speed_mouse_exited"]
[connection signal="pressed" from="Control/UpgradeBG/ScrollContainer/VBoxContainer/MachineWorkSpeed" to="Control" method="_on_machine_work_speed_pressed"]
[connection signal="mouse_entered" from="Control/UpgradeBG/ScrollContainer/VBoxContainer/GoldenPlasChance" to="Control" method="_on_golden_plas_chance_mouse_entered"]
[connection signal="mouse_exited" from="Control/UpgradeBG/ScrollContainer/VBoxContainer/GoldenPlasChance" to="Control" method="_on_golden_plas_chance_mouse_exited"]
[connection signal="pressed" from="Control/UpgradeBG/ScrollContainer/VBoxContainer/GoldenPlasChance" to="Control" method="_on_golden_plas_chance_pressed"]
[connection signal="mouse_entered" from="Control/UpgradeBG/ScrollContainer/VBoxContainer/GoldenPlasAmount" to="Control" method="_on_golden_plas_amount_mouse_entered"]
[connection signal="mouse_exited" from="Control/UpgradeBG/ScrollContainer/VBoxContainer/GoldenPlasAmount" to="Control" method="_on_golden_plas_amount_mouse_exited"]
[connection signal="pressed" from="Control/UpgradeBG/ScrollContainer/VBoxContainer/GoldenPlasAmount" to="Control" method="_on_golden_plas_amount_pressed"]
